  Doligez)

- #9987, #9988, #9996, #9997: add an odoc mode for the documentation
  of the standard library and compiler library
  (Florian Angeletti, review by David Allsopp, Sébastien Hinderer,
   and Gabriel Scherer)

- #9632: Document incremental build solutions with opam
  (Vincent Laviron, review by Daniel Bünzli and Gabriel Scherer)

### Compiler user-interface and warnings:

- #1737, #2092, #7852, #7859, #10405, #10417: Update locations during
  destructive substitutions
  (Thomas Refis, review by Gabriel Radanne, report by Hugo Heuzard)

- #2245: Improve error message for link order error in bytecode
  (Pierre Chambart, review by Jérémie Dimino and Gabriel Scherer)

- #8732, improved error messages for invalid private row type definitions.
  For instance, [ type t = private [< `A > `A ] ] .
  (Florian Angeletti, review by Jacques Garrigue, Thomas Refis,
   and Gabriel Scherer)

- #9407: added warning for missing mli interface file
  (Anukriti Kumar, review by Florian Angeletti)

- #9960: extend ocamlc/ocamlopt's -o option to work when compiling C files
  (Sébastien Hinderer, reported by Daniel Bünzli, review by Florian
  Angeletti and Gabriel Scherer)

- #10095: simplify the syntax error messages produced by the compiler.
  In many cases, the compiler would produce an error message that looked
  potentially helpful but was actually misguided and arguably confusing,
  because the error message implicitly referred to an earlier point in
  the source code than the point explicitly shown in the error message.
  (François Pottier, review by Gabriel Scherer and Frédéric Bour.)

* #10118, #10140: enable warning 6 [labels-omitted] by default.
  The following now warns:
    let f ~x y = ... in f 3 5
  the callsite (f 3 5) has to be turned into (f ~x:3 5).
  This prevents mistakes where two arguments of the same types are swapped.
  (Note: Dune already enables this warning by default.)
  (Gabriel Scherer, review by Xavier Leroy and Florian Angeletti,