@@ -19,6 +19,10 @@ $logo_height:67px;
 @import url(https://fonts.googleapis.com/css?family=Noticia+Text:400,400i,700);
 @import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,500,500i,600,600i,700,700i);
 
+$font-sans: "Fira Sans", Helvetica, Arial, sans-serif;
+$font-mono: "Fira Mono", courier, monospace;
+$font-serif: "Noticia Text", Georgia, serif;
+
 /* Reset */
 .pre,a,b,body,code,div,em,form,h1,h2,h3,h4,h5,h6,header,html,i,img,li,mark,menu,nav,object,output,p,pre,s,section,span,time,ul,td,var{
     margin:0;
@@ -47,7 +51,7 @@ html.smooth-scroll {
 }
 
 body{
-    font-family:"Fira Sans",Helvetica,Arial,sans-serif;
+    font-family: $font-sans;
     text-align:left;
     color:#333;
     background:#fff
@@ -76,7 +80,7 @@ html {
     &>header {
 	margin-bottom: 30px;
 	nav {
-	    font-family: "Fira Sans", Helvetica, Arial, sans-serif;
+	    font-family: $font-sans;
 	}
     }
 }
@@ -87,7 +91,7 @@ html {
     margin-right:4ex;
     margin-top:20px;
     margin-bottom:50px;
-    font-family:"Noticia Text",Georgia,serif;
+    font-family: $font-serif;
     line-height:1.5
 }
 
@@ -131,7 +135,7 @@ html {
 		padding-left:12px;
 	    }
 	    a {
-		font-family:"Fira Sans",sans-serif;
+		font-family: $font-sans;
 		font-size:.95em;
 		color:#333;
 		font-weight:400;
@@ -250,7 +254,7 @@ html {
     color:$logocolor;
     margin-right:4px;
     margin-left:-1em;
-    font-family:"Fira Sans",Helvetica,Arial,sans-serif;
+    font-family: $font-sans;
     font-size:13px;
     vertical-align:1px;
 }
@@ -260,7 +264,7 @@ html {
     color:$logocolor;
     margin-right:4px;
     margin-left:-1em;
-    font-family:"Fira Sans",Helvetica,Arial,sans-serif;
+    font-family: $font-sans;
     font-size:14px;
     vertical-align:1px;
 }
