@@ -292,6 +292,9 @@ OCaml 4.13.0
 - #9632: Document incremental build solutions with opam
   (Vincent Laviron, review by Daniel Bünzli and Gabriel Scherer)
 
+- #10497: Styling changes in the post-processed HTML manual (webman)
+  (Wiktor Kuchta, review by Florian Angeletti)
+
 ### Compiler user-interface and warnings:
 
 - #1737, #2092, #7852, #7859, #10405, #10417: Update locations during
